--- a/styles/mystyles.css
+++ b/styles/mystyles.css
@@ -21,6 +21,15 @@ p{
     justify-content:flex-start;
     
 }
+.alert-error{
+    background-color: rgb(251, 177, 177);
+}
+.alert-search{
+    border-left: 10px solid var(--secondary2);
+}
+.nav-link{
+    color:black;
+}
 /* header */
 .site-header{
     background-color: var(--primary);
@@ -38,4 +47,21 @@ p{
 }
 .home-img{
     border-radius: 50%;
+}
+
+.btn-info{
+    background-color: var(--secondary2);
+}
+
+#pets{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 1rem;
+    margin-top: 1rem;
+}
+.pet{
+    background-color: #ff9f1c;
+    border:1px solid black;
+    border-radius: 1rem;
+    padding:1rem;
 }
